# rinha-de-compiler

./: .gitignore  PARTICIPANTS.md  pyproject.toml  worklog.txt
files/: deep_ast.json  deep_ast.rinha  fib.json  fib1.json  fib1.rinha
pyrinha/: README.md  interpreter0.py  interpreter1.py  main.py  nodes.py  parser.py  test_parser.py  values.py
